# rapid-automation

./: .gitignore  AGENTS.md  CLAUDE.md  main.py  pyproject.toml
.github/: copilot-instructions.md  git-commit-instructions.md
docs/design/: VBA_Module_Reference.md
docs/design/Issue-1-3-glass-weight-function/: implementation-plan.md  requirements.md  task-list.md
docs/design/Issue1-1-sag-function/: implementation-plan.md  requirements.md  task-list.md
docs/design/Issue1-2-focal-length-function/: Issue1-2-focal-length-function.md  implementation-plan.md  requirements.md  task-list.md
docs/design/references/vba/: VBA_DrawingCreationTool.md
docs/planning/: project_proposal.md
references/VBA/: basCLL.bas  basCOM.bas  basMain.bas  basUDF.bas  clsAppEvent.cls  clsAssyPlotData.cls  clsBalsamPlotData.cls  clsBorder.cls  clsCfgFile.cls  clsError.cls  clsFileNameCtrl.cls  clsFormula.cls  clsFuncLinkCtrl.cls  clsGlaDB.cls  clsGlassData.cls  clsGlassPlotData.cls  clsIniFile.cls  clsMaterialCode.cls  clsOpticalData.cls  clsPressParam.cls  clsPressPlotData.cls  clsProgCtrl.cls  clsRapidCtrl.cls  clsRapidDime.cls  clsRapidDoc.cls  clsRapidEdit.cls  clsRapidFooter.cls  clsRapidGeo.cls  clsRapidHeader.cls  clsRapidLayout.cls  clsRapidLine.cls  clsRapidOperate.cls  clsRapidParam.cls  clsRapidPick.cls  clsRapidPrim.cls  clsRapidTable.cls  clsRapidText.cls  clsRapidTol.cls  clsRibbonCtrl.cls  clsSagTable.cls  (+4 more)
src/optics/: __init__.py  calculations.py
tests/: test_optics_calculations.py
