[project]
name = "rapid-automation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "ipykernel>=7.1.0",
    "jupyterlab>=4.5.1",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "pywin32>=311",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.8.6",
    "pytest>=8.3.4",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

